# nph-tender-hub

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  destroy_dev.yml  promote_to_prod.yml
deprecated/: populate_tf_backend.sh  vars.tf.template
infra/: .terraform.lock.hcl  api.tf  backend.tf  check_bucket.sh  ecs.tf  efs.tf  global.auto.tfvars.example  iam.tf  kms.tf  lambda.tf  logs.tf  main.tf  outputs.tf  rds.tf  secrets.tf  switch_env.sh  vars.tf  vpc.tf
infra/envs/dev/: backend.hcl.example  terraform.tfvars.example
infra/envs/global/: backend.hcl.example  terraform.tfvars.example
infra/envs/prod/: backend.hcl.example  terraform.tfvars.example
infra/envs/shared/: backend.hcl.example  terraform.tfvars.example
infra/envs/stage/: backend.hcl.example  terraform.tfvars.example
src/: ci_checks_for_rds.py  create_budibase_instance.py  destroy_budibase_instance.py
src/bb_queries/: generate_patch_consumable_body.js  generate_patch_job_title_body.js  generate_patch_labour_cost_body.js  generate_patch_service_body.js  generate_patch_tender_line_items_body.js  generate_tender_card_description.js  generate_tender_single_date_only_display.js
src/db/: seed.py
src/lambdas/: create_budibase_instance.py  http_api.py  seed_db.py
terraform/: backend.tf.template  ecs.tf  efs.tf  iam.tf  kms.tf  lambda.tf  main.tf  outputs.tf  populate_tf_backend.sh  vars.tf.template  vpc.tf
test/: conftest.py  test_ci_checks_for_rds.py  test_create_budibase_instance.py  test_destroy_budibase_instance.py
test/lambdas/: test_ci_checks_for_rds.py  test_create_budibase_instance.py  test_destroy_budibase_instance.py  test_http_ai.py
