[project]
name = "tender-hub"
version = "0.0.1"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "bandit>=1.9.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",  # Includes 'coverage'
    "boto3>=1.42.0",
    "moto>=5.0.0",
    "aws-lambda-powertools>=3.26.0",
    "pydantic>=2.12.5",
    "pip>=26.1",
]
audit = [
    "pip-audit>=2.10.0"
]
audit-fixes = [
    "cryptography>=46.0.6",
    "pygments>=2.20.0",
    "requests>=2.33.0",
]
lambda-layer = [
]
psycopg-layer = [
    "psycopg[binary,pool]>=3.2.0",
]
local-dev = [
    {include-group = "dev"},
    {include-group = "audit"},
    {include-group = "audit-fixes"},
    {include-group = "lambda-layer"},
    {include-group = "psycopg-layer"},
]